<resources>
    <string name="app_name">Calc_Salario</string>
    <string name="calcsalliq">CalcSalLiq</string>
    <string name="tbsalbruto">tbSalbruto</string>
    <string name="lblsalbruto">lblSalbruto</string>
    <string name="lblsalbrt">lblsalbrt</string>
    <string name="informe_o_s_rio_bruto">Informe o Sário Bruto</string>
    <string name="lblnumdep">lblNumDep</string>
    <string name="insira_o_n_de_dependentes">Insira o nº de dependentes</string>
    <string name="outros_descontos">Outros Descontos</string>
    <string name="insira_outros_descontos_opcional">Insira Outros Descontos (Opcional)</string>
    <string name="informe_o_sal_rio_bruto">Informe o Salário Bruto</string>
    <string name="calcular">Calcular</string>
    <string name="textview">TextView</string>
    <string name="sal_rio_bruto">Salário Bruto</string>
    <string name="_0_00">0,00</string>
    <string name="inss">INSS</string>
    <string name="_0_00">0,00</string>
    <string name="irrf">IRRF</string>
    <string name="_0_00">0,00</string>
    <string name="outros_descontos">Outros Descontos</string>
    <string name="_0_00">0,00</string>
    <string name="sal_rio_l_quido">Salário Líquido</string>
    <string name="_0_00">0,00</string>
    <string name="descontos">Descontos</string>
    <string name="sal_rio_l_quido">Salário Líquido</string>
    <string name="totalsalliquido">TotalSalLiquido</string>
</resources>